# zaob-review-kit

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
content/global/: review-ignore.md  review-memory.md  review-performance.md  review-prompting.md  review-roles.md  review-security.md
content/role-standards/: 00-loading-guide.md  01-swe-standard.md  02-sa-standard.md  03-qa-standard.md  04-pe-standard.md  05-se-standard.md  06-oe-standard.md  07-de-standard.md  08-ux-standard.md  09-cl-standard.md  10-ceo-standard.md  11-da-standard.md  12-mle-standard.md  13-api-standard.md  14-finops-standard.md  15-dx-standard.md
content/templates/: archignore  gitignore-snippet.txt
content/workspace/: pack-materials.md  prep-review.md  project-context.md  review-best-practises.md  review-checklist.md
docs/agents/: claude-code.md  cursor.md  kiro.md  multiple-agents.md  overview.md  windsurf.md
docs/business/: zrk-spec.md
docs/commands/: init.md  install-all.md  install-global.md  install.md  list.md  overview.md  status.md  update.md
docs/contributing/: adding-an-agent.md  architecture.md  content-authoring.md
docs/getting-started/: first-review.md  installation.md  quickstart.md  what-is-zrk.md
docs/reference/: archignore.md  cli-flags.md  content-files.md  file-layout.md  manifest.md
docs/reviews/: multi-file-example.md
docs/workflow/: overview.md  prep-review.md  review-ignore.md  review-memory.md  review-prompting.md  review-roles.md
src/: error.rs  executor.rs  main.rs  manifest.rs  planner.rs
tests/: install_integration.rs  status_integration.rs
(+24 files in other folders)
