[package]
name = "zrk"
version = "0.2.1"
edition = "2021"
description = "Install review workflow files into AI coding agent config directories"
license = "MIT"
repository = "https://github.com/maemreyo/zaob-review-kit"
homepage = "https://github.com/maemreyo/zaob-review-kit"
keywords = ["ai", "review", "workflow", "claude", "coding-agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dialoguer = { version = "0.11", optional = true }

[features]
default = ["wizard"]
wizard = ["dialoguer"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
